tests/patsyn/should_fail/T14112.hs
{-# LANGUAGE BangPatterns #-}
{-# LANGUAGE PatternSynonyms #-}
module T14112 where

pattern MyJust1 a = Just !a
